Prevent flicker in webkit

--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -5,6 +5,8 @@ html {
 }
 
 body {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform:translate3d(0,0,0);
   background-color: $bg;
   color: $brown-dark;
   font-size: em(18);
